--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "@angular/platform-browser-dynamic": "~2.0.2",
     "@angular/router": "~3.0.2",
     "@angular/upgrade": "~2.0.2",
-
+    "angular-2-local-storage": "0.0.22",
     "angular-in-memory-web-api": "~0.1.5",
+    "angular2-localstorage": "^0.4.0",
     "bootstrap": "^3.3.7",
-    "systemjs": "0.19.39",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.1.14",
+    "node-cron": "^1.1.2",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
@@ -50,7 +53,6 @@
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
-
     "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
     "tslint": "^3.15.1",
